--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   csv: ^6.0.0
   path_provider: ^2.1.5
   flutter_launcher_icons: ^0.14.3
+  intl: ^0.20.2
+  share_plus: ^10.1.4
 
 dev_dependencies:
   flutter_test:
